--- a/binary2decimal.ipynb
+++ b/binary2decimal.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "``` brainfuck\n",
-    "-+ [ - < + ] ->>>[-]++ [ - < + ] ->, [ + [ - < + ] ->------------------------------------------------[+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->[-]]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>>>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>>>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>]+ [ - < + ] ->,]+ [ - < + ] ->>+ [ - < + ] ->>++++++++++++++++++++++++++++++++++++++++++++++++.\n",
+    "-+ [ - < + ] ->, [ + [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>++ [ - < + ] ->>]+ [ - < + ] ->>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>]+ [ - < + ] ->------------------------------------------------+ [ - < + ] ->>>[-]+ [ - < + ] ->[-+ [ - < + ] ->>++ [ - < + ] ->>>++ [ - < + ] ->]+ [ - < + ] ->[-]+ [ - < + ] ->>>[-+ [ - < + ] ->++ [ - < + ] ->>>]+ [ - < + ] ->,]+ [ - < + ] ->>+ [ - < + ] ->>++++++++++++++++++++++++++++++++++++++++++++++++.\n",
     "```"
    ]
   },
@@ -31,7 +31,7 @@
    "source": [
     "The code you see above works!  If you don't believe me, you can test it in this [interpreter](https://www.nayuki.io/page/brainfuck-interpreter-javascript).\n",
     "\n",
-    "I do not recommend writing brainfuck directly (if at all) so we instead build up a bunch of reusable strings using haskell"
+    "It is a well accepted best practice not to write brainfuck directly (or at all, for that matter).  Therefore, we build up a bunch of reusable strings with haskell."
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -157,44 +157,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**multiply** and **power** turn out not to be nessesary, but were interesting to write.  Multiplication seemed to need two extra cells and exponentes seemed to require four.  It is probably possible to abstract the repeated application of a given operation."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "multiply addr1 addr2 addr3 ss1 ss2 = \n",
-    "    zeroCell addr3 ++\n",
-    "    copyTo addr2 ss1 ss2 ++ zeroCell ss2 ++\n",
-    "    goto ss1 ++ \"[-\" ++ addTo addr1 addr3 ss2 ++ goto ss1 ++ \"]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "power addr1 addr2 addr3 ss1 ss2 ss3 ss4 = zeroCell addr3 ++ \"+\" ++\n",
-    "    copyTo addr2 ss1 ss2 ++ zeroCell ss2 ++\n",
-    "    goto ss1 ++ \"[-\" ++ multiply addr1 addr3 ss2 ss3 ss4 ++ \n",
-    "        zeroCell ss3 ++ zeroCell ss4 ++\n",
-    "        destrMoveTo ss2 addr3 ++ goto ss1 ++ \"]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "double addr ss1 ss2 = copyTo addr ss1 ss2 ++ addTo ss1 addr ss2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -218,18 +193,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "home = 0\n",
+    "inputCell = 1\n",
+    "outputCell = 2\n",
+    "safeSpace1 = 3\n",
+    "safeSpace2 = 4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 0: Home\n",
-    "- 1: Read Register\n",
-    "- 2: Agg and Output\n",
-    "- 3: Current $2^n$"
+    "## The Final Program:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "\"-+ [ - < + ] ->>>[-]++ [ - < + ] ->, [ + [ - < + ] ->------------------------------------------------[+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->[-]]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>>>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->>>>>>>>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>>>++ [ - < + ] ->>>>>>>>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>>>>>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>>>>>>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>]+ [ - < + ] ->,]+ [ - < + ] ->>+ [ - < + ] ->>++++++++++++++++++++++++++++++++++++++++++++++++.\""
+       "\"-+ [ - < + ] ->, [ + [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>++ [ - < + ] ->>]+ [ - < + ] ->>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>]+ [ - < + ] ->>>>[-]+ [ - < + ] ->>>[-+ [ - < + ] ->>++ [ - < + ] ->>>>++ [ - < + ] ->>>]+ [ - < + ] ->>>[-]+ [ - < + ] ->>>>[-+ [ - < + ] ->>>++ [ - < + ] ->>>>]+ [ - < + ] ->------------------------------------------------+ [ - < + ] ->>>[-]+ [ - < + ] ->[-+ [ - < + ] ->>++ [ - < + ] ->>>++ [ - < + ] ->]+ [ - < + ] ->[-]+ [ - < + ] ->>>[-+ [ - < + ] ->++ [ - < + ] ->>>]+ [ - < + ] ->,]+ [ - < + ] ->>+ [ - < + ] ->>++++++++++++++++++++++++++++++++++++++++++++++++.\""
       ]
      },
      "metadata": {},
@@ -245,11 +232,11 @@
     }
    ],
    "source": [
-    "\"-\" ++ setCell 3 1 ++ readDoWrite (fromAscii 1 ++ \n",
-    "    \"[\" ++ addTo 3 2 safeSpace1 ++\n",
-    "        zeroCell 1 ++ \"]\" ++\n",
-    "        copyTo 3 4 safeSpace1 ++ addTo 3 4 safeSpace1 ++ destrMoveTo 4 3\n",
-    "    ) 1 2 (toAscii 2)"
+    "\"-\" ++ readDoWrite (\n",
+    "        double outputCell safeSpace1 safeSpace2 ++\n",
+    "        fromAscii inputCell ++ \n",
+    "        addTo inputCell outputCell safeSpace1\n",
+    "    ) 1 2 (toAscii outputCell)"
    ]
   }
  ],
